# Bug-Detective

./: .env.example  .gitignore  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  README.md  deploy.sh  development_plan.md  docker-compose.yml  improvement_plan.md  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  server.mjs
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: config.py  ingest.py  rca.py  security.py  server.py
data/: embeddings-meta.json
public/: app.js  index.html  style.css
scripts/: build-embeddings.py  build-index.py  embed-search.py
tests/: conftest.py  test_config.py  test_render_markdown.py  test_security.py  test_server.py
